// Original file: src/builtin_ledger.proto


export interface BuiltinLedgerGrpcCancelReservationRequest {
  'payerPositionAccountId'?: (string);
  'hubJokeAccountId'?: (string);
  'transferAmount'?: (string);
  'currencyCode'?: (string);
  'transferId'?: (string);
}

export interface BuiltinLedgerGrpcCancelReservationRequest__Output {
  'payerPositionAccountId'?: (string);
  'hubJokeAccountId'?: (string);
  'transferAmount'?: (string);
  'currencyCode'?: (string);
  'transferId'?: (string);
}
