// Original file: src/builtin_ledger.proto


export interface BuiltinLedgerGrpcHighLevelResponse {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface BuiltinLedgerGrpcHighLevelResponse__Output {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}
