// Original file: src/builtin_ledger.proto


export interface BuiltinLedgerGrpcHighLevelStreamResponse {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}

export interface BuiltinLedgerGrpcHighLevelStreamResponse__Output {
  'requestType'?: (number);
  'requestId'?: (string);
  'success'?: (boolean);
  'errorMessage'?: (string);
}
